examples/test/testpolicy11841.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11841
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key11: value12
      key29: value47
      key0: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value37
      podSelector:
        matchLabels:
          key46: value49
